# python-bot

./: .env.example  .gitignore  Dockerfile  Documentacion.MD  README.md  carlos-project-mvp.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.prod.txt  requirements.txt  start-prod.sh  start.sh
.github/workflows/: deploy.yml  pr-check.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_fix_embedding_column_types.py  003_add_body_metrics_and_fitness_goals.py
app/: config.py  main.py
app/agents/: __init__.py  base.py  complexity_analyzer.py  conversation_context.py  conversational_orchestrator.py  debt_strategist.py  inbox_processor.py  intent_router.py  jira_helper.py  jira_hu_builder.py  morning_planner.py  nutrition_analyzer.py  orchestrator.py  planning_assistant.py  spending_analyzer.py  study_balancer.py  task_planner.py  unified_orchestrator.py  workout_logger.py
app/api/: admin.py  telegram_webhook.py
app/bot/: conversations.py  handlers.py  keyboards.py
app/brain/: __init__.py  core.py  embeddings.py  memory.py  prompts.py  tools.py
app/core/: __init__.py
app/db/: database.py  models.py
app/domain/: __init__.py
app/scheduler/: setup.py
app/services/: notion.py  (+5 more)
data/: conversations.json
docs/: ARCHITECTURE_ANALYSIS.md  TESTED_HUS.md  TESTING_HUS.md
nginx/: carlos-command.conf
scripts/: backup.sh  deploy.sh  entrypoint.sh  index_tasks.py  migrate.sh  redeploy.sh  restore.sh  setup-vps.sh  setup_telegram_webhook.py  test_agents.py  test_notion_connection.py
tests/: conftest.py
(+78 files in other folders)
